sna: Wait upon the same ring when out-of-memory

The current out-of-memory allocation code was waiting upon the wrong
ring id instead of using the index - causing an issue if forced to wait
upon the BLT ring. If we still cannot allocate, make sure that all
caches are dropped.

References: https://bugs.freedesktop.org/show_bug.cgi?id=92911
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>